--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node server.js"
   },
-  "dependencies": {
-    "express": "^4.18.2",
-    "google-spreadsheet": "^3.3.0"
+ "dependencies": {
+  "express": "^4.18.2",
+  "firebase-admin": "^11.10.1" 
   }
 }
