--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "chrono-node": "^2.8.4",
+    "dayjs": "^1.11.18",
     "express": "^4.18.2",
     "firebase-admin": "^11.10.1"
   }
