--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "chrono-node": "^2.8.4",
     "dayjs": "^1.11.18",
     "express": "^4.21.2",
