install node-fetch

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chrono-node": "^2.8.4",
     "dayjs": "^1.11.18",
     "express": "^4.21.2",
-    "firebase-admin": "^11.11.1"
+    "firebase-admin": "^11.11.1",
+    "node-fetch": "^2.7.0"
   }
 }
